[package]
name = "gearbox"
version = "0.1.0"
authors = ["Robin Alexander Plate"]
edition = "2021"
license = "MIT"
repository = "https://github.com/gemlock-linux/gearbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.0"
nix = "0.23.1"
bitflags = "1.3.2"
