[package]
name = "gearbox"
version = "0.1.0"
authors = ["Robin Alexander Plate"]
edition = "2021"
license = "MIT"
description = "A box full of utilities, a unworthy replacement for coreutils / busybox / toybox."
repository = "https://github.com/gemlock-linux/gearbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.8"
nix = "0.24.1"
bitflags = "1.3.2"
sha1 = "0.10.1"
hex-literal = "0.3.4"
